--- a/home.css
+++ b/home.css
@@ -539,7 +539,7 @@ body.lock {
         text-align: left;
         font-size: 16px;
         line-height: 20px;
-        font-weight: 600;
+        font-weight: bold;
         font-family: "Helvetica", "Arial", "Microsoft YaHei", sans-serif;
         width: 100%;
         padding-left: 15px;
@@ -555,7 +555,7 @@ body.lock {
 
     #header .header-link .link .des {
         display: block;
-        font-weight: 400;
+        font-weight: normal;
     }
 
     #header .header-list {
