--- a/home.css
+++ b/home.css
@@ -1089,6 +1089,27 @@ main {
     border-radius: 6px;
 }
 
+#bar04 {
+    width: 100%;
+    height: 6px;
+    background-color: #f2f2f2;
+    border-radius: 6px;
+    z-index: 1;
+}
+
+#bar04 div {
+    height: 100%;
+    text-align: right;
+    padding: 0 3px;
+    line-height: 6px;
+    width: 0;
+    background: linear-gradient(45deg, #F9CF00, #F97300);
+    background-color: #F97300;
+    box-sizing: border-box;
+    z-index: 2;
+    border-radius: 6px;
+}
+
 .main .main-module .section-content .links-content .contain-container .small-container .container .content .bar-container .bar-content .bar-caption {
     display: inline-block;
     white-space: nowrap;
